更新依赖